[package]
name = "disk_recovery_engine"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
lazy_static = "1.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "fileapi", "handleapi"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
